fix(PDS-967): overflow can be overwritten by style ordering

--- a/packages/drawer/src/components/DrawerCustom/styles.module.scss
+++ b/packages/drawer/src/components/DrawerCustom/styles.module.scss
@@ -37,7 +37,7 @@ div[data-content-wrapper='true'] {
 }
 
 .drawer {
-  overflow: unset;
+  overflow: unset !important; /* stylelint-disable-line declaration-no-important */
   display: flex;
   flex-direction: column;
 
